[package]
name = "imperianova"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.5.5"
bevy = "0.5"
bevy_tilemap = "0.4.0"
bevy_4x_camera = "0.1.2"
bevy-inspector-egui = "0.4"
bevycheck = "0.1"

[[bin]]
name = "imperianova"
path = "src/main.rs"
