[package]
name = "imperianova"
version = "0.1.0"
publish = false
authors = ["Kaelan Cooter <me@kaelan.org>"] # ToDo: you are the author ;)
edition = "2018"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
bevy = "0.5.0"
game_plugin = {path = "game_plugin"}
winit = "0.24.0"

[build-dependencies]
embed-resource = "1.4"
